--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
             <h4>PT-BR</h4>
             <br>
             <p class="lead paragrafoBrancos">
-                Olá! Eu sou a Laura, tenho 19 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.
+                Olá! Eu sou a Laura, tenho 19 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.<br><br>
 
-                Estou imersa em uma jornada de descobertas e aprendizados constantes. Venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.
+                Estou imersa em uma jornada de descobertas e aprendizados constantes. Venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.<br><br>
 
-                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
+                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.<br><br>
 
                 Busco constantemente o desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado representa uma oportunidade de crescimento.
                 <div class="space2"></div>
@@ -235,11 +235,11 @@
             <h4>ENG</h4>
             <br>
             <p class="lead paragrafoBrancos">
-                Hello! My name is Laura, I'm 19 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.
+                Hello! My name is Laura, I'm 19 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.<br><br>
 
-                I am immersed in a journey of discovery and constant learning. I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.
+                I am immersed in a journey of discovery and constant learning. I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.<br><br>
 
-                I have big goals to achieve, the main one being joining the Air Force. My motivation is driven by curiosity and a constant desire to learn. I am always ready to embrace new opportunities that come my way.
+                I have big goals to achieve, the main one being joining the Air Force. My motivation is driven by curiosity and a constant desire to learn. I am always ready to embrace new opportunities that come my way.<br><br>
 
                 I constantly seek personal and professional development, and I firmly believe that each challenge faced represents an opportunity for growth.
             </p>
