--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                               alt="Thumbnail [100%x225]" src="projeto1.png" data-holder-rendered="true"
                               style="height: 225px; width: 100%a;max-width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">Esse portfólio foi criado para mostrar um pouco do meu conhecimento sobre as seguintes tecnologias, respectivamente <br>A, B, C.</p>
+                                  <p class="card-text">Esse portfólio foi criado para mostrar um pouco do meu conhecimento sobre as seguintes tecnologias, respectivamente:<br>A, B, C.</p>
                                   <ul>
                                       <li>HTML</li>
                                       <li>CSS</li>
