--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                           <div class="card mb-4 box-shadow">
                               <img class="card-img-top"
                               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                              alt="Thumbnail [100%x225]" src="projeto1.png" data-holder-rendered="true"
+                              alt="Thumbnail [100%x225]" src="projets.png" data-holder-rendered="true"
                               style="height: 225px; width: 100%a;max-width: 100%; display: block;">
                               <div class="card-body">
                                   <p class="card-text">Esse portfólio foi criado para mostrar um pouco do meu conhecimento sobre as seguintes tecnologias, respectivamente:<br>A, B, C.</p>
@@ -282,7 +282,7 @@
                           <div class="card mb-4 box-shadow">
                               <img class="card-img-top"
                                   data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                  alt="Thumbnail [100%x225]" src="projeto2.png" data-holder-rendered="true"
+                                  alt="Thumbnail [100%x225]" src="projets.png" data-holder-rendered="true"
                                   style="height: 225px; width: 100%; display: block;">
                               <div class="card-body">
                                   <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, D, Y.</p>
@@ -307,7 +307,7 @@
                           <div class="card mb-4 box-shadow">
                               <img class="card-img-top"
                               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                              alt="Thumbnail [100%x225]" src="projeto3.png" data-holder-rendered="true"
+                              alt="Thumbnail [100%x225]" src="projets.png" data-holder-rendered="true"
                               style="height: 225px; width: 100%a;max-width: 100%; display: block;">
                               <div class="card-body">
                                   <p class="card-text">Esse projeto foi desenvolvido para criar um relógio digital simples que exibe a hora atual usando as tecnologias A, B, C.</p>
@@ -336,7 +336,7 @@
                           <div class="card mb-4 box-shadow">
                               <img class="card-img-top"
                                   data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                  alt="Thumbnail [100%x225]" src="projeto4.png" data-holder-rendered="true"
+                                  alt="Thumbnail [100%x225]" src="projets.png" data-holder-rendered="true"
                                   style="height: 225px; width: 100%; display: block;">
                               <div class="card-body">
                                   <p class="card-text">E esse projeto é um simulador de piano que permite aos usuários tocar notas musicais usando o teclado do computador, foi desenvolvido usando as tecnologias A, C, B.</p>
