--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </p>
             <a href="https://github.com/lauramachts0" target="_blank"><i style="color:white" class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/laura-schneider-87389a2b7/" target="_blank"><i style="color:white" class="fab fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/_lauramachts/" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/lauramachtss/" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
             <a href="https://www.youtube.com/channel/UCG2wUTb_Rv_vHHijOFPyO-w" target="_blank"><i style="color:white" class="fab fa-youtube"></i></a>
             <div class="space1">
             </div>
