--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <img alt="TypeScript" height="100" width="100" src="typescript.svg">
             </a>
             <a href="https://www.java.com/" target="_blank">
-                <img alt="Java" height="100" width="100" src="java.svg">
+                <img alt="Java" height="100" width="100" src="angular.svg">
             </a>
             <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
                 <img alt="HTML" height="100" width="100" src="html5.svg">
