--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <a href="https://www.typescriptlang.org/" target="_blank">
                 <img alt="TypeScript" height="100" width="100" src="typescript.svg">
             </a>
-            <a href="https://www.java.com/" target="_blank">
+            <a href="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg" target="_blank">
                 <img alt="Java" height="100" width="100" src="angular.svg">
             </a>
             <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
