--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
             <a href="https://www.typescriptlang.org/" target="_blank">
                 <img alt="TypeScript" height="100" width="100" src="typescript.svg">
             </a>
-            <a href="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg" target="_blank">
-                <img alt="Java" height="100" width="100" src="angular.svg">
+            <a href="https://angular.dev/" target="_blank">
+                <img alt="Angular" height="100" width="100" src="angular.png">
             </a>
             <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
                 <img alt="HTML" height="100" width="100" src="html5.svg">
