--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </p>
             <a href="https://github.com/lauramachts0" target="_blank"><i style="color:white" class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/laura-schneider-87389a2b7/" target="_blank"><i style="color:white" class="fab fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/lauramachtss/" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/lau.machtss/" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
             <a href="https://www.youtube.com/channel/UCG2wUTb_Rv_vHHijOFPyO-w" target="_blank"><i style="color:white" class="fab fa-youtube"></i></a>
             <div class="space1">
             </div>
@@ -221,7 +221,7 @@
             <h4>PT-BR</h4>
             <br>
             <p class="lead paragrafoBrancos">
-                Olá! Eu sou a Laura, tenho 19 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.<br><br>
+                Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.<br><br>
 
                 Estou imersa em uma jornada de descobertas e aprendizados constantes. Venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.<br><br>
 
@@ -235,7 +235,7 @@
             <h4>ENG</h4>
             <br>
             <p class="lead paragrafoBrancos">
-                Hello! My name is Laura, I'm 19 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.<br><br>
+                Hello! My name is Laura, I'm 18 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.<br><br>
 
                 I am immersed in a journey of discovery and constant learning. I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.<br><br>
 
