--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
                 Estou imersa em uma jornada de descobertas e aprendizados constantes. Venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.<br><br>
 
-                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.<br><br>
+                Tenho grandes metas a serem alcançadas. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado que vão além da programação. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.<br><br>
 
                 Busco constantemente o desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado representa uma oportunidade de crescimento.
                 <div class="space2"></div>
@@ -239,7 +239,7 @@
 
                 I am immersed in a journey of discovery and constant learning. I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.<br><br>
 
-                I have big goals to achieve, the main one being joining the Air Force. My motivation is driven by curiosity and a constant desire to learn. I am always ready to embrace new opportunities that come my way.<br><br>
+                I have big goals to achieve. My motivation is driven by curiosity and a constant desire to learn. I am always ready to embrace new opportunities that come my way.<br><br>
 
                 I constantly seek personal and professional development, and I firmly believe that each challenge faced represents an opportunity for growth.
             </p>
